<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_1_line">한줄 소개</string>
    <string name="about_detail">상세 소개</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">FASTFIVE</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attach_photo">이미지 첨부</string>
    <string name="back">뒤로</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="branch">지점</string>
    <string name="cancel">취소</string>
    <string name="channel">채널</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="community">커뮤니티</string>
    <string name="community_content1">커뮤니티</string>
    <string name="community_content2">커뮤니티 검색</string>
    <string name="company_logo">회사로고</string>
    <string name="company_name">회사명</string>
    <string name="cooperation">제휴안내</string>
    <string name="display_detail_preview">상세 페이지에서 보여집니다.</string>
    <string name="display_list_preview">리스트 미리보기에 보여집니다.</string>
    <string name="do_you_want_talk">상대방과 대화하시겠습니까?</string>
    <string name="find_chat_friend">멤버 찾기</string>
    <string name="heart">♥</string>
    <string name="homepage">홈페이지</string>
    <string name="input_hash_tag">해시태그를 입력하세요 (쉼표로 구분, 최대 2개-7글자 제한)</string>
    <string name="input_link">링크를 삽입하세요</string>
    <string name="interest">관심</string>
    <string name="interest_content1">관심 리스트</string>
    <string name="interest_content2">나의 관심 커뮤니티 목록</string>
    <string name="interest_content3">비밀번호 재설정 방법을 선택하세요:</string>
    <string name="interest_list">관심 리스트</string>
    <string name="like">좋아요</string>
    <string name="link_title">링크 제목 (옵션)</string>
    <string name="login_content1">휴대번호</string>
    <string name="login_content2">비밀번호</string>
    <string name="login_content3">Log in</string>
    <string name="login_content4">로그인 상세 정보를 잊으셨나요? 로그인 관련 도움을 받으세요!</string>
    <string name="login_content5">계정이 없으신가요? 가입하기</string>
    <string name="login_content6">가입시 패스트파이브의</string>
    <string name="login_content7">약관 및 개인정보취급방침</string>
    <string name="login_content8">에 동의합니다</string>
    <string name="login_help_content1">로그인 도움말</string>
    <string name="login_help_content2">비밀번호를 잊으셨나요?</string>
    <string name="login_help_content3">비밀번호 재설정 방법을 선택하세요:</string>
    <string name="login_help_content4">전화번호</string>
    <string name="login_help_content5">이메일을 통한 재설정</string>
    <string name="login_help_content6">기타 문제</string>
    <string name="login_help_content7">FESTFIVE 고객 센터</string>
    <string name="logout">로그아웃 되었습니다.</string>
    <string name="meeting_room_content1">회의실 예약</string>
    <string name="meeting_room_content2">방문객 예약</string>
    <string name="message">메세지</string>
    <string name="modify_user_info_content1">프로필 수정</string>
    <string name="modify_user_info_content10">일</string>
    <string name="modify_user_info_content11">지점</string>
    <string name="modify_user_info_content12">방 이름</string>
    <string name="modify_user_info_content13">이메일</string>
    <string name="modify_user_info_content14">회사명</string>
    <string name="modify_user_info_content15">직무</string>
    <string name="modify_user_info_content16">소개</string>
    <string name="modify_user_info_content17">수정완료</string>
    <string name="modify_user_info_content18">생년월일</string>
    <string name="modify_user_info_content2">전화번호</string>
    <string name="modify_user_info_content3">기존 비밀번호</string>
    <string name="modify_user_info_content4">새 비밀번호</string>
    <string name="modify_user_info_content5">새 비밀번호 확인</string>
    <string name="modify_user_info_content6">이름</string>
    <string name="modify_user_info_content7">생년월일</string>
    <string name="modify_user_info_content8">년</string>
    <string name="modify_user_info_content9">월</string>
    <string name="more">더보기</string>
    <string name="my_profile">내 프로필</string>
    <string name="my_schedule_content1">예약 관리</string>
    <string name="my_schedule_content10">MM 월</string>
    <string name="my_schedule_content11">DD 일</string>
    <string name="my_schedule_content12">예약이 없습니다.</string>
    <string name="my_schedule_content2">나의 일정 목록</string>
    <string name="my_schedule_content3">회의실</string>
    <string name="my_schedule_content4">방문객</string>
    <string name="my_schedule_content5">커뮤니티</string>
    <string name="my_schedule_content6">회의실 예약</string>
    <string name="my_schedule_content7">방문객 예약</string>
    <string name="my_schedule_content8">생년월일</string>
    <string name="my_schedule_content9">YYYY 년</string>
    <string name="news_feed">뉴스피드</string>
    <string name="notify">알림</string>
    <string name="notify_item">공지사항</string>
    <string name="ok">확인</string>
    <string name="one_word_to_member">패스트파이브 멤버들에게 한마디</string>
    <string name="people">패파멤버스</string>
    <string name="people_content1">회사 소개</string>
    <string name="people_content2">찾으시는 업체가 있으신가요?</string>
    <string name="phone_num">전화번호</string>
    <string name="please_input_about_1_line">한줄 소개를 입력하세요.</string>
    <string name="please_input_about_detail">상세 소개를 입력하세요.</string>
    <string name="please_input_branch">지점을 입력하세요.</string>
    <string name="please_input_company_info">정보 입력</string>
    <string name="please_input_company_logo">회사로고를 등록하세요.</string>
    <string name="please_input_company_name">회사명을 입력하세요.</string>
    <string name="please_input_one_word_to_member">패스트파이브 멤버들에게 한마디를 입력해주세요.</string>
    <string name="please_input_rep_name">대표 이름을 입력하세요.</string>
    <string name="please_input_room_name">방이름을 입력하세요</string>
    <string name="profile">프로필</string>
    <string name="pwd_setting_content1">비밀번호 재설정</string>
    <string name="pwd_setting_content2">계정찾기</string>
    <string name="register">등록하기</string>
    <string name="rep_name">대표 이름</string>
    <string name="room_name">방이름</string>
    <string name="select_team_member">팀원 선택</string>
</resources>