<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n1:orientation="vertical" n1:background="#ffffffff" n1:layout_width="fill_parent" n1:layout_height="fill_parent"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <RelativeLayout n1:gravity="center_vertical" n1:orientation="horizontal" n1:background="#fff3f3f3" n1:layout_width="fill_parent" n1:layout_height="@dimen/activity_198px">
        <TextView n1:textSize="@dimen/font_48px" n1:textColor="#ff000000" n1:id="@id/close_button_text" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginLeft="@dimen/activity_76px" n1:text="뒤로" n1:layout_alignParentLeft="true" n1:layout_centerVertical="true" n1:contentDescription="@null" />
        <TextView n1:textSize="18.0sp" n1:textColor="#ff161616" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/please_input_company_info" n1:layout_centerHorizontal="true" n1:layout_centerVertical="true" />
        <TextView n1:textSize="@dimen/font_48px" n1:textColor="#ff000000" n1:id="@id/ok_button_text" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginRight="@dimen/activity_76px" n1:text="등록" n1:layout_alignParentRight="true" n1:layout_centerVertical="true" n1:contentDescription="@null" />
    </RelativeLayout>
    <View n1:background="#ff939597" n1:layout_width="fill_parent" n1:layout_height="@dimen/activity_2px" />
    <ScrollView n1:scrollbars="none" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
        <LinearLayout n1:orientation="vertical" n1:paddingLeft="16.0dip" n1:paddingTop="12.0dip" n1:paddingRight="16.0dip" n1:paddingBottom="12.0dip" n1:layout_width="fill_parent" n1:layout_height="fill_parent">
            <LinearLayout n1:layout_width="fill_parent" n1:layout_height="wrap_content">
                <LinearLayout n1:orientation="vertical" n1:layout_width="0.0dip" n1:layout_height="wrap_content" n1:layout_weight="1.0">
                    <LinearLayout n1:layout_width="wrap_content" n1:layout_height="wrap_content">
                        <TextView n1:textSize="14.0sp" n1:textColor="#ffff0000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="* " />
                        <TextView n1:textSize="14.0sp" n1:textColor="#ff000000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/company_name" />
                    </LinearLayout>
                    <EditText n1:textSize="14.0sp" n1:id="@id/edt_company_name" n1:background="@drawable/edt_border" n1:padding="6.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="4.0dip" n1:lines="1" n1:inputType="text" />
                </LinearLayout>
                <LinearLayout n1:gravity="right" n1:layout_width="0.0dip" n1:layout_height="wrap_content" n1:layout_marginLeft="20.0dip" n1:layout_weight="0.8">
                    <LinearLayout n1:layout_gravity="center_vertical" n1:layout_width="wrap_content" n1:layout_height="wrap_content">
                        <TextView n1:textSize="14.0sp" n1:textColor="#ffff0000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="* " />
                        <TextView n1:textSize="14.0sp" n1:textColor="#ff000000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/company_logo" />
                    </LinearLayout>
                    <FrameLayout n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginLeft="10.0dip">
                        <ImageView n1:id="@id/iv_logo" n1:background="@drawable/box_img01" n1:layout_width="@dimen/activity_240px" n1:layout_height="@dimen/activity_240px" n1:scaleType="fitXY" />
                        <ImageView n1:layout_gravity="center" n1:id="@id/iv_camera" n1:layout_width="@dimen/activity_240px" n1:layout_height="@dimen/activity_240px" n1:src="@mipmap/picture" />
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout n1:layout_gravity="center_vertical" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginTop="10.0dip">
                <TextView n1:textSize="14.0sp" n1:textColor="#ffff0000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="* " />
                <TextView n1:textSize="14.0sp" n1:textColor="#ff000000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/about_1_line" />
            </LinearLayout>
            <EditText n1:textSize="14.0sp" n1:textColorHint="#ff939597" n1:id="@id/edt_about_1_line" n1:background="@drawable/edt_border" n1:padding="6.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="4.0dip" n1:hint="@string/display_list_preview" n1:lines="1" n1:inputType="text" />
            <LinearLayout n1:layout_gravity="center_vertical" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginTop="10.0dip">
                <TextView n1:textSize="14.0sp" n1:textColor="#ffff0000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="* " />
                <TextView n1:textSize="14.0sp" n1:textColor="#ff000000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/about_detail" />
            </LinearLayout>
            <EditText n1:textSize="14.0sp" n1:textColorHint="#ff939597" n1:gravity="center|left|top" n1:id="@id/edt_about_detail" n1:background="@drawable/edt_border" n1:padding="6.0dip" n1:layout_width="fill_parent" n1:layout_height="160.0dip" n1:layout_marginTop="4.0dip" n1:hint="@string/display_detail_preview" n1:inputType="textMultiLine" />
            <LinearLayout n1:layout_gravity="center_vertical" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginTop="10.0dip">
                <TextView n1:textSize="14.0sp" n1:textColor="#ffff0000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="* " />
                <TextView n1:textSize="14.0sp" n1:textColor="#ff000000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/one_word_to_member" />
            </LinearLayout>
            <EditText n1:textSize="14.0sp" n1:id="@id/edt_one_word" n1:background="@drawable/edt_border" n1:padding="6.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="4.0dip" n1:lines="1" n1:inputType="text" />
            <LinearLayout n1:layout_gravity="center_vertical" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginTop="10.0dip">
                <TextView n1:textSize="14.0sp" n1:textColor="#ffff0000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="* " />
                <TextView n1:textSize="14.0sp" n1:textColor="#ff000000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/rep_name" />
            </LinearLayout>
            <EditText n1:textSize="14.0sp" n1:id="@id/edt_rep_name" n1:background="@drawable/edt_border" n1:padding="6.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="4.0dip" n1:lines="1" n1:inputType="text" />
            <LinearLayout n1:layout_width="fill_parent" n1:layout_height="wrap_content">
                <LinearLayout n1:orientation="vertical" n1:layout_width="0.0dip" n1:layout_height="wrap_content" n1:layout_marginRight="7.0dip" n1:layout_weight="1.0">
                    <LinearLayout n1:layout_gravity="center_vertical" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginTop="10.0dip">
                        <TextView n1:textSize="14.0sp" n1:textColor="#ffff0000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="* " />
                        <TextView n1:textSize="14.0sp" n1:textColor="#ff000000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/branch" />
                    </LinearLayout>
                    <Spinner n1:textSize="14.0sp" n1:id="@id/edt_branch" n1:background="@drawable/edt_border" n1:padding="6.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="4.0dip" n1:lines="1" n1:inputType="text" />
                </LinearLayout>
                <LinearLayout n1:orientation="vertical" n1:layout_width="0.0dip" n1:layout_height="wrap_content" n1:layout_marginLeft="7.0dip" n1:layout_weight="1.0">
                    <LinearLayout n1:layout_gravity="center_vertical" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginTop="10.0dip">
                        <TextView n1:textSize="14.0sp" n1:textColor="#ffff0000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="* " />
                        <TextView n1:textSize="14.0sp" n1:textColor="#ff000000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/room_name" />
                    </LinearLayout>
                    <Spinner n1:textSize="14.0sp" n1:id="@id/edt_room_name" n1:background="@drawable/edt_border" n1:padding="6.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="4.0dip" n1:lines="1" n1:inputType="text" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="10.0dip">
                <LinearLayout n1:orientation="vertical" n1:layout_width="0.0dip" n1:layout_height="wrap_content" n1:layout_marginRight="7.0dip" n1:layout_weight="1.0">
                    <TextView n1:textSize="14.0sp" n1:textColor="#ff000000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/attach_photo" />
                    <FrameLayout n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginTop="4.0dip">
                        <ImageView n1:id="@id/iv_photo" n1:background="@drawable/box_img01" n1:layout_width="@dimen/activity_240px" n1:layout_height="@dimen/activity_240px" n1:scaleType="fitXY" />
                        <ImageView n1:layout_gravity="center" n1:id="@id/iv_plus" n1:layout_width="@dimen/activity_240px" n1:layout_height="@dimen/activity_240px" n1:src="@mipmap/picture" />
                    </FrameLayout>
                </LinearLayout>
                <LinearLayout n1:orientation="vertical" n1:layout_width="0.0dip" n1:layout_height="wrap_content" n1:layout_marginLeft="7.0dip" n1:layout_weight="3.2">
                    <TextView n1:textSize="14.0sp" n1:textColor="#ff000000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/homepage" />
                    <EditText n1:textSize="14.0sp" n1:id="@id/edt_homepage" n1:background="@drawable/edt_border" n1:padding="6.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="4.0dip" n1:lines="1" n1:inputType="text" />
                    <TextView n1:textSize="14.0sp" n1:textColor="#ff000000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginTop="10.0dip" n1:text="@string/phone_num" />
                    <EditText n1:textSize="14.0sp" n1:id="@id/edt_phone_num" n1:background="@drawable/edt_border" n1:padding="6.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="4.0dip" n1:lines="1" n1:inputType="text" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout n1:orientation="horizontal" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
                <LinearLayout n1:gravity="center_vertical" n1:orientation="vertical" n1:id="@id/ll_select_team_member" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginTop="10.0dip">
                    <TextView n1:textSize="14.0sp" n1:textColor="#ff000000" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginBottom="10.0dip" n1:text="@string/select_team_member" />
                    <ImageView n1:layout_gravity="center" n1:id="@id/imageView" n1:layout_width="20.0dip" n1:layout_height="20.0dip" n1:layout_margin="10.0dip" n1:src="@drawable/newsfeed_new" />
                </LinearLayout>
                <LinearLayout n1:layout_gravity="bottom" n1:orientation="horizontal" n1:background="@drawable/edt_border" n1:layout_width="0.0dip" n1:layout_height="40.0dip" n1:layout_marginLeft="10.0dip" n1:layout_marginTop="10.0dip" n1:layout_weight="1.0">
                    <LinearLayout n1:orientation="vertical" n1:id="@id/ll_member_list" n1:visibility="gone" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
                        <HorizontalScrollView n1:id="@id/member_list" n1:paddingLeft="7.0dip" n1:paddingRight="7.0dip" n1:scrollbars="none" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="2.0dip" n1:layout_marginBottom="2.0dip" n1:fillViewport="true">
                            <LinearLayout n1:orientation="horizontal" n1:id="@id/member_list_container" n1:layout_width="wrap_content" n1:layout_height="wrap_content" />
                        </HorizontalScrollView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <Button n1:textSize="@dimen/font_45px" n1:textStyle="bold" n1:textColor="#ff000000" n1:id="@id/btn_register" n1:background="#ffd5d5d5" n1:layout_width="fill_parent" n1:layout_height="45.0dip" n1:layout_marginLeft="85.0dip" n1:layout_marginTop="20.0dip" n1:layout_marginRight="85.0dip" n1:layout_marginBottom="20.0dip" n1:text="@string/register" style="?android:borderlessButtonStyle" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>